# PasteIt-Backend

./: Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose.yml
src/: main.rs
src/routes/: mod.rs  pastes.rs
src/utils/: appstate.rs  cors.rs  cryptography.rs  database_config.rs  db.sql  env.rs  mod.rs  net_utils.rs  swagger.rs
