[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "PasteIt-Backend"
path = "src/main.rs"

[dependencies]
aes-gcm = { version = "0.10.3" }
axum = { version = "0.8.1", features = ["default", "tokio", "multipart", "json"] }
bs62 = { version = "0.1.4" }
chrono = { version = "0.4.39", features = ["serde"] }
deadpool-postgres = { version = "0.14.1" , features = ["serde", "rt_tokio_1"]}
deadpool-redis = { version = "0.20.0", features = ["serde", "rt_tokio_1"]}
dotenvy = { version = "0.15.7" }
hex = { version = "0.4.3" }
native-tls = { version = "0.2.14" }
tokio = { version = "1.43.0", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
tower-http = { version = "0.6.2", features = ["cors", "tokio", ] }
postgres-native-tls = { version = "0.5.1" }
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["json"] }
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.139" }
sha2 = { version = "0.10.8" }
utoipa = { version = "5.3.1", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
tower = "0.5.2"
